--- a/style.css
+++ b/style.css
@@ -110,6 +110,9 @@ p{
     flex: 0 0 50%;
     max-width: 47%;
 }}
+.navbar{
+    background:#C0C0C0;
+    }
 .navbar-toggle{
     width: 50px;
     height: 50px;
